fix: blockquote spacing when used within the global footer

--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -172,6 +172,10 @@ blockquote:nth-child(n) {
     content: '';
   }
 
+  .hb-local-footer & {
+    margin: 0 0 2rem 0; // adjust blockquote browser spacing defaults when placed in the local footer
+  }
+
   p {
     @include hb-blockquote;
 
